boletin nuevo 4 ejercicios hechos